# prismDocs

./: .env.example  .gitignore  .mcp.json  CLEANUP.md  DOCKER.md  Document Generator Agent.md  MAKEFILE_COMMANDS.md  MAKEFILE_QUICKSTART.md  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.json  test-docker.sh  test_all_pdf_features.py  test_pdf_enhancements.py  transformer-internals-what-changed-since-2017.pptx  vercel.json
.agent/: pdf_enhancements_phase2_summary.md
.claude/: CLAUDE.md
.cursor/plans/: content-aware_image_generation_84afaee6.plan.md
.github/workflows/: docker-image.yml
backend/: .dockerignore  Dockerfile  Dockerfile.hf  Dockerfile.railway  Dockerfile.railway-light  render.yaml  requirements-docker.txt  requirements-local.txt  requirements-local.txt.header  requirements-railway-light.txt  requirements-railway.txt  start.sh
backend/config/: settings.yaml
config/: settings.yaml
dev/: llm-architectures.md
docs/: DEPLOYMENT.md  RAILWAY_DEPLOYMENT.md
docs/architecture/: architecture.md
docs/claude-code/: architecture.md  skills.md
docs/guides/: FOLDER_BASED_PROCESSING.md  FOLDER_PROCESSING_QUICKSTART.md  REUSE_IMAGES_QUICKSTART.md  REUSING_IMAGES.md
docs/learning/: git-worktree-guide.md
docs/learnings/: 2024-12-refactoring-session.md
docs/pattern/: commands.md
docs/plans/: 2025-01-09-docs-structure-design.md  2025-01-10-gemini-image-generation-design.md
docs/project/: STATUS.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  vercel.json
scripts/: batch_process_topics.py  generate_from_folder.py  generate_pdf_from_cache.py  quick_pdf_with_images.py  run_generator.py  validate_pdf.py
src/output/: temp_input_1720a8a0afb94ca5bd40610a356bf466.md  temp_input_23faa6f2c718427b8be08010cbf10b31.md  temp_input_8bd6a36b33b24d64a645df98b541d928.md
tests/: test-concept-extraction.py
tests/api/: test_cache_service.py  test_dependencies.py  test_generate_route.py  test_generation_service.py  test_health_route.py  test_request_models.py  test_response_models.py  test_storage_service.py  test_upload_route.py
(+269 files in other folders)
